[tool.poetry]
name = "did the rocket launch yet?"
version = "0.1.0"
description = "Bot para encontrar el momento exacto de un video"
authors = ["mbarrientos.externos <mariobarrientos0303@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^13.15"
requests = "^2.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
